# pydocs

./: .gitignore  README.md  WORKING_NOTES.md  pyproject.toml  setup.ps1
.github/workflows/: release.yml
examples/: __init__.py  showcase.py  usage_guide.py
examples/journal_paper_example/: main.py
examples/usage_guide_example/: __init__.py  assets.py  citations.py  main.py  reference_tables.py  snippets.py
release-notes/: v0.3.1.md  v0.5.0.md
scripts/: release.ps1  setup-repo.cmd  setup-repo.ps1
src/docscriptor/: __init__.py  blocks.py  core.py  document.py  equations.py  indexing.py  inline.py  markup.py  model.py  references.py  settings.py  styles.py  tables.py
src/docscriptor/components/: __init__.py  blocks.py  generated.py  inline.py  media.py  people.py  sheets.py
src/docscriptor/layout/: theme.py
src/docscriptor/renderers/: __init__.py  context.py  docx.py  html.py  pdf.py
tests/: test_document_renderers.py  test_journal_paper_example.py  test_package.py  test_showcase_example.py  test_usage_guide_example.py
