[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docscriptor"
version = "0.1.0"
description = "Python-first document composition toolkit for generating PDF and DOCX outputs."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "docscriptor contributors" }
]
keywords = ["document generation", "pdf", "docx", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Topic :: Documentation",
  "Topic :: Text Processing",
]
dependencies = [
  "python-docx>=1.1.2",
  "reportlab>=4.2.5",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "pypdf>=5.4.0",
  "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/Gonie-Gonie/pydocs"
Repository = "https://github.com/Gonie-Gonie/pydocs"
Issues = "https://github.com/Gonie-Gonie/pydocs/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["docscriptor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
