[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docscriptor"
dynamic = ["version"]
description = "Python-first document authoring toolkit for generating DOCX, PDF, and HTML outputs from the same source."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "docscriptor contributors" }
]
keywords = ["document generation", "pdf", "docx", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Topic :: Documentation",
  "Topic :: Text Processing",
]
dependencies = [
  "python-docx>=1.1.2",
  "reportlab>=4.2.5",
]

[project.optional-dependencies]
examples = [
  "matplotlib>=3.10.0",
  "pandas>=2.3.0",
]
dev = [
  "build>=1.2.0",
  "matplotlib>=3.10.0",
  "pandas>=2.3.0",
  "pypdf>=5.4.0",
  "pytest>=8.0.0",
  "setuptools-scm>=8.0.0",
  "twine>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/Gonie-Gonie/pydocs"
Repository = "https://github.com/Gonie-Gonie/pydocs"
Documentation = "https://github.com/Gonie-Gonie/pydocs#readme"
Issues = "https://github.com/Gonie-Gonie/pydocs/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["docscriptor*"]

[tool.setuptools_scm]
fallback_version = "0.3.1"
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"

[tool.pytest.ini_options]
testpaths = ["tests"]
